--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test_med",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://zacklim33.github.io/grihf-frontend_capstone_starter_code"
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^18.0.0",
