--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test_med",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://zacklim33.github.io/grihf-frontend_capstone_starter_code"
+  "homepage": "https://zacklim33.github.io/grihf-frontend_capstone_starter_code",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^18.0.0",
@@ -22,7 +22,6 @@
     "build": "react-scripts build && rm -rdf server/build && mv build server/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
